# TempControl

./: .gitignore  CMakeLists.txt  README.md  TempControl.cpp  TempControl.h  TempControl.sln  TempControl.vcxproj  TempControl.vcxproj.filters
api/: TemperatureControl.h
include/: TemperatureControl.h  TemperatureRegulationInterface.h
src/: TemperatureControl.cpp
tst/: maincpp.cpp
